--- a/webtools/testopia/template/en/default/testopia/case/add.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/add.html.tmpl
@@ -42,6 +42,42 @@
   };
 </script>
 <script src="testopia/dojo/dojo.js" type="text/javascript"></script>
+<script src="testopia/js/util.js" type="text/javascript"></script>
+<script type="text/javascript">
+  var qaContacts = [% components FILTER none %];
+
+  function getProdComps(product){
+      document.getElementById("components").disabled = true;
+      document.getElementById("action").disabled = true;
+      dojo.io.bind({
+          url:   "tr_new_plan.cgi",
+          content: {  product_id: product, action: "getcomps" },
+          load:  function(type, data, evt){
+                   var comps = document.getElementById("components");
+                   comps.options.length = 0;
+                   qaContacts.length = 0;
+                   for (i in data){
+                     var myOp = new Option(data[i].name, data[i].id);
+                     addOption(comps, myOp);
+                     qaContacts.push(data[i].qa_contact);
+                   }
+                   document.getElementById("components").disabled = false;
+                   document.getElementById("action").disabled = false;
+                 },
+          error: function(type, error){ alert(error.message);},
+          mimetype: "text/json"
+      });
+  }   
+  
+  function chgTester(obj) {
+    [% IF Param("useqacontact") AND action == 'Add' %]
+      document.getElementById('tester').value = qaContacts[obj.selectedIndex];
+    [% ELSE %]
+      return;
+    [% END %]
+  }
+  
+</script>
 
 [% PROCESS testopia/style.none.tmpl %]
 
