Give users a product limited dropdown of environments when creating or updating a run.

--- a/webtools/testopia/template/en/default/testopia/run/add.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/add.html.tmpl
@@ -38,6 +38,7 @@
 
 [% PROCESS global/header.html.tmpl %]
 <script src="testopia/js/util.js" type="text/javascript"></script>
+<script src="testopia/dojo/dojo.js" type="text/javascript"></script>
 
 [% PROCESS testopia/style.none.tmpl %]
 [% PROCESS testopia/search/variables.none.tmpl %]
