--- a/webtools/testopia/template/en/default/testopia/run/form.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/form.html.tmpl
@@ -18,7 +18,31 @@
   # Contributor(s): Ed Fuentetaja <efuentetaja@acm.org>
   #                 Greg Hendricks <ghendricks@novell.com>
   #%]
-  
+
+<script type="text/javascript">
+    dojo.require("dojo.io");
+    function getProdEnvs(product){
+        document.getElementById("env_pick").disabled = true;
+        document.getElementById("action").disabled = true;
+        dojo.io.bind({
+            url:   "tr_new_plan.cgi",
+            content: {  product_id: product, action: "getenvs" },
+            load:  function(type, data, evt){
+                     var comps = document.getElementById("env_pick");
+                     comps.options.length = 0;
+                     for (i in data){
+                       var myOp = new Option(data[i].name, data[i].id);
+                       addOption(comps, myOp);
+                     }
+                     document.getElementById("env_pick").disabled = false;
+                     document.getElementById("action").disabled = false;
+                   },
+            error: function(type, error){ alert(error.message);},
+            mimetype: "text/json"
+        });
+    }
+</script>
+
 <a name="attributes"></a>
   <input type="hidden" name="run_id" value="[% run.id FILTER none %]"> 
   <table border="0" cellpadding="2" cellspacing="0">
@@ -44,24 +68,6 @@
     <tr>
       <th align="right">Manager</th>
       <td><input name="manager" value="[% run.manager.login ? run.manager.login : user.login FILTER html %]"></td>
-      <th align="right">Environment</td>
-      <td><input name="environment" id="environment" value="[% run.environment.id FILTER none %]" />
-      	  <a href="tr_query.cgi?current_tab=environment" target="blank"><img src="testopia/img/env_lookup.png" title="Search for Environments" align="middle"></a>
-          <a href="tr_new_environment.cgi" target="_blank">New</a>
-      </td>
-      
-    </tr>
-
-    <tr>
-      <th align="right">Status</th>
-      <td>
-        [% SET statuslist = [{ id => 1, name => 'Running'}, {id => 0, name=> 'Stopped'}] %]
-        [% PROCESS select sel = { name => "status", 
-                                  list => statuslist, 
-                                  default => run.stop_date ? 0 : 1 }
-        %]
-
-      </td>
       <th align="right"><a href="tr_builds.cgi?plan_id=[% run.plan.id FILTER none %]">Build</a></td>
       <td>
         [% PROCESS select sel = { name => "build", 
@@ -73,6 +79,45 @@
        [% END %]
       </td>
       
+    </tr>
+
+    <tr>
+      <th align="right">Status</th>
+      <td colspan="3">
+        [% SET statuslist = [{ id => 1, name => 'Running'}, {id => 0, name=> 'Stopped'}] %]
+        [% PROCESS select sel = { name => "status", 
+                                  list => statuslist, 
+                                  default => run.stop_date ? 0 : 1 }
+        %]
+
+      </td>
+    </tr>
+    <tr><td colspan="4" align="center">
+      <table>
+        <tr><th align="center"  colspan="2">Environment</th></tr>
+        <tr>
+          <th align="right">ID</th>
+          <td><input name="environment" id="environment" value="[% run.environment.id FILTER none %]" />
+            <a href="tr_query.cgi?current_tab=environment" target="blank"><img src="testopia/img/env_lookup.png" title="Search for Environments" align="middle"></a>
+            <a href="tr_new_environment.cgi" target="_blank">New</a>
+          </td>
+        </tr>
+        <tr>
+          <th>Or Select from Product</th>
+          <td>
+    [% PROCESS select sel = { name      => 'prod_pick',
+                              list      => user.get_selectable_products,
+                              default   => run.plan.product_id
+                              events    => 'onChange="getProdEnvs(this.value)"' } %]
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+    [% PROCESS select sel = { name      => 'env_pick' }%]
+          </td>
+        </tr>
+      </table></td>
     </tr>
     <tr>
       <th align="right">Summary</th>
@@ -89,5 +134,8 @@
     </tr>
   </table>
   <div class="submits">
-    <input type="submit" name="action" value="[% action %]" />
+    <input type="submit" name="action" id="action" value="[% action %]" />
   </div>
+<script type="text/javascript">
+  getProdEnvs(document.getElementById('prod_pick').value);
+</script>
