--- a/webtools/testopia/template/en/default/hook/bug/knob.html.tmpl/links/tr.html.tmpl
+++ b/webtools/testopia/template/en/default/hook/bug/knob.html.tmpl/links/tr.html.tmpl
@@ -1,4 +1,4 @@
 [%# 1.0@bugzilla.org %]
         
         &nbsp; | &nbsp;
-        <a href="tr_list_caseruns.cgi?bug_id=[% bug.bug_id FILTER none %]&current_tab=case_run">View [% terms.Bug %] Test Case Runs</a>
+        <a href="tr_list_cases.cgi?bug_id=[% bug.bug_id FILTER none %]&current_tab=case">View [% terms.Bug %] Test Cases</a>
