--- a/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
@@ -45,7 +45,7 @@
 <script type="text/javascript">
   djConfig = {
     parseWidgets: false,
-    searchIds: ["tip_[% run.id FILTER none %]"]
+    searchIds: ["tip_[% run.id FILTER none %]","caseruns_table",[% FOREACH cr = table.list %]"env_[% loop.count %]","head_caserun_[% loop.count %]"[%',' UNLESS loop.last %][% END %]]
   };
 </script>
 <script src="testopia/js/util.js" type="text/javascript"></script>
@@ -54,6 +54,7 @@
 <script type="text/javascript">
     dojo.require("dojo.io");
     dojo.require("dojo.widget.Tooltip");
+    dojo.require("dojo.widget.ComboBox");
     function getSelected (ccbox){
         var ccselected = new Array();
         for (j=0; j < ccbox.options.length; j++){
