--- a/webtools/testopia/template/en/default/testopia/case/history.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/history.html.tmpl
@@ -99,25 +99,25 @@
   <br>SETUP<hr>
   <div id="case_setup">
   <pre>
-    [% diff.setup %]
+    [% diff.setup FILTER html %]
   </pre>
   </div>
   <br>BREAKDOWN<hr>
   <div id="case_breakdown">
   <pre>
-    [% diff.breakdown %]
+    [% diff.breakdown FILTER html %]
   </pre>
   </div>
   <br>ACTION<hr>
   <div id="case_action">
   <pre>
-    [% diff.action %]
+    [% diff.action FILTER html %]
   </pre>
   </div>
   <br>EFFECT<hr>
   <div id="case_effect">
   <pre>
-    [% diff.effect %]
+    [% diff.effect FILTER html %]
   </pre>
   </div>
 </div>
